--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas></canvas>
-    <input type="range" id="line-width" min="1" max="10" value="5" step="0.5" />
-    <div>
+    <div class="color-options">
       <input type="color" id="color" />
       <div
         class="color-option"
@@ -59,11 +57,6 @@
       ></div>
       <div
         class="color-option"
-        style="background-color: #bdc3c7"
-        data-color="#bdc3c7"
-      ></div>
-      <div
-        class="color-option"
         style="background-color: #2ecc71"
         data-color="#2ecc71"
       ></div>
@@ -73,9 +66,27 @@
         data-color="#e67e22"
       ></div>
     </div>
-    <button id="mode-btn">Fill</button>
-    <button id="destory-btn">Destory</button>
-    <button id="eraser-btn">eraser</button>
+    <canvas></canvas>
+    <div class="btns">
+      <input
+        type="range"
+        id="line-width"
+        min="1"
+        max="10"
+        value="5"
+        step="0.5"
+      />
+      <button id="mode-btn">🩸Fill</button>
+      <button id="destory-btn">💣 Destory</button>
+      <button id="eraser-btn">❌ eraser</button>
+      <label for="file">
+        🏞️ Add Photo
+        <input type="file" accept="image/*" id="file" />
+      </label>
+
+      <input type="text" placeholder="Add text here... :)" id="text" />
+      <button id="save">💾 Save image</button>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
